2007-12-12  Neal H. Walfield  <neal@gnu.org>

	* activity.h: Update comment.
	* activity.c (activity_consistency_check_): Don't assert that
	LRU_LOCK is held.
	* object.h (object_disown_simple): Don't call
	activity_consistency_check here.
	(object_desc_disown_): Likewise.
	(object_desc_claim_): Likewise.
	(object_desc_claim_): Likewise.
	* object.c (memory_object_alloc): Call activity_consistency_check.
	(memory_object_destroy): Likewise.
	(object_find_soft): Likewise.
	(folio_free): Likewise.
	(folio_object_alloc): Likewise.

2007-12-11  Neal H. Walfield  <neal@gnu.org>

	* as.h (as_compute_gbits_cappage): Remove debugging code.

2007-12-11  Neal H. Walfield  <neal@gnu.org>

	* t-as.c (test) [0]: Add test case to demonstrate failure mode.
	* as.c (as_build_internal): Move the guard and cappage sizing from
	here...
	* as.h (as_compute_gbits_cappage): ... to this new function.
	Change allocation strategy to better support a mix of folios and
	pages.
	* t-guard.c: New file.
	* Makefile.am (TESTS): Add t-guard.
	(t_guard_CPPFLAGS): New variable.
	(t_guard_SOURCES): Likewise.

2007-12-11  Neal H. Walfield  <neal@gnu.org>

	* as.c (AS_LOCK): New macro.
	(AS_UNLOCK): Likewise.
	(AS_DUMP): Likewise.
	(as_build_internal): Use the above macros.  Unlock before dumping
	the address space.
	(as_slot_ensure_full): Use the above macros.
	(as_dump_from): Update comment.

	(do_walk): Don't display dead capabilities.

2007-12-11  Neal H. Walfield  <neal@gnu.org>

	* t-link.c (output_debug): New declaration.

2007-12-11  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): When checking for overflow, be careful to
	correctly cast the results.

2007-12-11  Neal H. Walfield  <neal@gnu.org>

	* activity.c (activity_destroy): Clear VICTIM->SIBLING_NEXT.TYPE
	and VICTIM->SIBLING_PREV.TYPE.  Add additional asserts.

2007-12-10  Neal H. Walfield  <neal@gnu.org>

	* object.h (lru_lock): New declaration.
	(LINK_TEMPLATE): Assert that LRU_LOCK is held.